tests/baselines/reference/differenceTypeAssignability.errors.txt
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(14,5): error TS2322: Type 'T - V' is not assignable to type 'T - U'.
  Type 'V' is not assignable to type 'U'.
    Type 'string' is not assignable to type 'U'.
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(15,5): error TS2322: Type 'U' is not assignable to type 'T'.
  Type '"u"' is not assignable to type 'T'.
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(26,5): error TS2322: Type 'T - "c"' is not assignable to type 'T - "a"'.
  Type '"c"' is not assignable to type '"a"'.
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(27,5): error TS2322: Type 'T - AB' is not assignable to type 'T - "a"'.
  Type 'AB' is not assignable to type '"a"'.
    Type '"b"' is not assignable to type '"a"'.
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(28,5): error TS2322: Type 'T - "a"' is not assignable to type 'T'.
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(29,5): error TS2322: Type 'U' is not assignable to type 'T'.
  Type '"u"' is not assignable to type 'T'.
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(38,5): error TS2322: Type '{ a: any; }' is not assignable to type '{ a: any; b: any; }'.
  Property 'b' is missing in type '{ a: any; }'.
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(39,5): error TS2322: Type '{ a: any; b: any; } - T' is not assignable to type '{ a: any; b: any; } - U'.
  Type 'T' is not assignable to type 'U'.
    Type '"x" | "y" | "z"' is not assignable to type 'U'.
      Type '"x"' is not assignable to type 'U'.
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(40,5): error TS2322: Type '{ a: any; c: any; }' is not assignable to type '{ a: any; b: any; }'.
  Property 'b' is missing in type '{ a: any; c: any; }'.
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(42,5): error TS2322: Type '{ a: any; }' is not assignable to type 'T'.
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(43,5): error TS2322: Type 'T - U' is not assignable to type 'T - "a"'.
  Type 'U' is not assignable to type '"a"'.
    Type '"u"' is not assignable to type '"a"'.
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(44,5): error TS2322: Type 'T - "a"' is not assignable to type 'T - U'.
  Type '"a"' is not assignable to type 'U'.
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(47,5): error TS2322: Type 'BN' is not assignable to type 'T - "a"'.
tests/cases/conformance/types/rest/differenceTypeAssignability.ts(48,5): error TS2322: Type 'T - "a"' is not assignable to type 'BN'.


==== tests/cases/conformance/types/rest/differenceTypeAssignability.ts (14 errors) ====
    type A = 'a';
    type B = 'b';
    type C = 'c';
    type AB = A | B;
    type AC = A | C;
    type BN = { b: number };
    function f<T extends 'x' | 'y' | 'z', U extends 'u', V extends string> (t: T, u: U, v: V) {
        let t_u: T - U;
        let t_v: T - V;
        let u_t: U - T;
    
        t_u = t;   // ok
        t_u = t_u; // ok
        t_u = t_v; // error
        ~~~
!!! error TS2322: Type 'T - V' is not assignable to type 'T - U'.
!!! error TS2322:   Type 'V' is not assignable to type 'U'.
!!! error TS2322:     Type 'string' is not assignable to type 'U'.
        t_u = u_t; // error
        ~~~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
!!! error TS2322:   Type '"u"' is not assignable to type 'T'.
    
        var t_a: T - A;
        var t_c: T - C;
        var t_ab: T - AB;
        var u_a: U - A;
    
        t_a = t_a; // ok
        t_ab = t_a; // ok
        t_a = t; // ok
    
        t_a = t_c; // error
        ~~~
!!! error TS2322: Type 'T - "c"' is not assignable to type 'T - "a"'.
!!! error TS2322:   Type '"c"' is not assignable to type '"a"'.
        t_a = t_ab; // error
        ~~~
!!! error TS2322: Type 'T - AB' is not assignable to type 'T - "a"'.
!!! error TS2322:   Type 'AB' is not assignable to type '"a"'.
!!! error TS2322:     Type '"b"' is not assignable to type '"a"'.
        t = t_a; // error, T-a is missing 'a' if T contains 'a'
        ~
!!! error TS2322: Type 'T - "a"' is not assignable to type 'T'.
        t_a = u_a; // error
        ~~~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
!!! error TS2322:   Type '"u"' is not assignable to type 'T'.
    
        var ab_u: { a, b } - U;
        var ab_t: { a, b } - T;
        var a_t: { a } - T;
        var ac_t: { a, c } - T;
    
        ab_t = ab_t; // ok
        a_t = ab_t; // ok
        ab_t = a_t; // error
        ~~~~
!!! error TS2322: Type '{ a: any; }' is not assignable to type '{ a: any; b: any; }'.
!!! error TS2322:   Property 'b' is missing in type '{ a: any; }'.
        ab_u = ab_t; // error
        ~~~~
!!! error TS2322: Type '{ a: any; b: any; } - T' is not assignable to type '{ a: any; b: any; } - U'.
!!! error TS2322:   Type 'T' is not assignable to type 'U'.
!!! error TS2322:     Type '"x" | "y" | "z"' is not assignable to type 'U'.
!!! error TS2322:       Type '"x"' is not assignable to type 'U'.
        ab_t = ac_t // error
        ~~~~
!!! error TS2322: Type '{ a: any; c: any; }' is not assignable to type '{ a: any; b: any; }'.
!!! error TS2322:   Property 'b' is missing in type '{ a: any; c: any; }'.
    
        t_a = a_t; // error, this makes no sense.
        ~~~
!!! error TS2322: Type '{ a: any; }' is not assignable to type 'T'.
        t_a = t_u; // error, let T and U contain property u. Then T-a has property u but T-U does not.
        ~~~
!!! error TS2322: Type 'T - U' is not assignable to type 'T - "a"'.
!!! error TS2322:   Type 'U' is not assignable to type '"a"'.
!!! error TS2322:     Type '"u"' is not assignable to type '"a"'.
        t_u = t_a; // error, let T contain property a and U not. Then T-a has no a, but T-U does.
        ~~~
!!! error TS2322: Type 'T - "a"' is not assignable to type 'T - U'.
!!! error TS2322:   Type '"a"' is not assignable to type 'U'.
    
        var bn: BN;
        t_a = bn; // error, we have no idea what T is supposed to be
        ~~~
!!! error TS2322: Type 'BN' is not assignable to type 'T - "a"'.
        bn = t_a; // would be ok only if T extends BN
        ~~
!!! error TS2322: Type 'T - "a"' is not assignable to type 'BN'.
    }
    